--- a/projects/demo-showcase/src/index.html
+++ b/projects/demo-showcase/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 <head>
   <meta charset="utf-8">
   <title>ngx-bio-tools</title>
