--- a/projects/demo-showcase/src/index.html
+++ b/projects/demo-showcase/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="light">
 <head>
   <meta charset="utf-8">
-  <title>ngx-bio-tools</title>
+  <title>ngx-mol-viewers</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
